docs: document API changes for show tags
